--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello UserController!{% endblock %}
+{% block title %}User Form{% endblock %}
 
 {% block body %}
 <style>
@@ -9,12 +9,12 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>User Form</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/dvida/Desktop/symphony/test/test/src/Controller/UserController.php</code></li>
-        <li>Your template at <code>C:/Users/dvida/Desktop/symphony/test/test/templates/user/index.html.twig</code></li>
-    </ul>
+    {{ form_start(form) }}
+        {{ form_row(form.username) }}
+        {{ form_row(form.email) }}
+        <button type="submit" class="btn btn-primary">Submit</button>
+    {{ form_end(form) }}
 </div>
 {% endblock %}
